# pirate-sim

./: .gitignore  Cargo.toml
.github/: copilot-instructions.md
crates/sim-core/: Cargo.toml
crates/sim-core/examples/: bench_ai_tick.rs  bench_long.rs  bench_pathfind.rs  bench_trade.rs  colosseum.rs  diag_nav.rs  diag_navmesh.rs  diag_polygon_los.rs  equilibrium_report.rs
crates/sim-core/src/: ai.rs  bt.rs  cargo.rs  coastline.rs  coastline_geom.rs  combat.rs  command.rs  equilibrium.rs  goods.rs  harbor.rs  lib.rs  market.rs  market_clearer.rs  market_curve.rs  money.rs  nav.rs  navmesh.rs  pathfind.rs  policy.rs  pop.rs  port.rs  portroutes.rs  ship.rs  shiptype.rs  shipyard.rs  sim_rng.rs  spatial.rs  telemetry.rs  tile_mesh.rs  trade.rs  types.rs  world.rs
crates/sim-core/src/map/: land.rs  mod.rs
crates/sim-core/src/weather/: hazards.rs  mod.rs  wind.rs
crates/sim-core/tests/: ai_behavior.rs  combat.rs
crates/sim-viz/: Cargo.toml
data/registries/: goods.ron  port_policies.ron  ports.ron  ship_types.ron
planning/: architecture-revised.md  architecture.md  code-health-audit.md  crewing-plan.md  development-log.md  harbor-zones.md  navigation-plan.md  observability-plan.md  overall-plan-sketch.md  phase-3-plan.md  phase-3-postmortem.md  phase-4-plan.md  phase1-plan.md  phase3-plan.md  vision-doc.md
planning/archive/: phase1-plan.md  phase2-plan.md  research-manifest.md
planning/research/: demographics.md  diplomacy-gaps.md  diplomacy.md  goods-taxonomy.md  map-and-geography.md  narrow-channel-navigation.md  naval-combat.md  navigation-methods.md  port-coordinates.md  production-model.md  sailor-recruitment.md  ship-attrition-economics-1650-1720.md  ship-types.md  trade-restrictions.md
tools/preprocess/: README.md  preprocess_coast.py  preprocess_land.py  preprocess_land_from_polys.py  (+5 more)
(+2 files in other folders)
