[workspace]
members = ["crates/sim-core", "crates/sim-viz"]
resolver = "2"

# Perf Phase 1: link-time optimization across the whole workspace and a
# single codegen unit per crate. Trades roughly 2x release-build time
# for ~10–20% runtime on the AI/auction hot path. Determinism is
# preserved (same Rust source, same float math). `panic = "abort"`
# deliberately omitted so existing test infrastructure keeps working.
[profile.release]
lto = "fat"
codegen-units = 1
