[package]
name = "sim-core"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { version = "0.29", features = ["serde"] }
bytemuck = { version = "1", features = ["derive"] }
microlp = "0.4"
slotmap = "1"
serde = { version = "1", features = ["derive"] }
ron = "0.8"
rand_core = "0.6"
rand_pcg = { version = "0.3", features = ["serde1"] }
arrayvec = { version = "0.7", features = ["serde"] }

[dev-dependencies]
rstest = "0.23"
